pushing so Dan can look at our CSS

--- a/public/assets/css/photojenia_style.css
+++ b/public/assets/css/photojenia_style.css
@@ -1,3 +1,20 @@
-.list-group-item {
+/* .list-group-item {
     line-height: 2.5;
+  } */
+  @media (max-width:639px) {
+body {
+  background-color: rgb(54, 48, 48);
+}
+  }
+
+  @media (min-width: 640px) {
+
+  }
+
+  @media (min-width: 768px) {
+
+  }
+
+  @media (min-width: 980px) {
+
   }
