--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../public/assets/css/photojenia_style.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="assets/css/photojenia_style.css" media="screen" title="no title" charset="utf-8">
   <title>Home Page</title>
 </head>
 
 <body>
+  {{> topnav}}
   {{{body}}}
 </body>
 
