sharing the partials with y'all

--- a/views/partials/topnav.handlebars
+++ b/views/partials/topnav.handlebars
@@ -1,13 +1,14 @@
 <nav id="topnav" class="navbar">
-    <button id="profilePicture" ></button>
-    
+
+    <i id="profilePicture" class="fas fa-user"></i>
+
     <a id="title" class="navbar-brand" href="#">PHOTOJENIA</a>
 
     <div class="d-flex justify-content-end">
-        <button id="home" class="navButton"></button>
-        <button id="search" class="navButton"></button>
-        <button id="notifications" class="navButton"></button>
-        <button id="post" class="navButton"></button>
+        <i id="home" class="faButton fas fa-home"></i>
+        <i id="search" class="faButton fas fa-search"></i>
+        <i id="notifications" class="faButton fas fa-bolt"></i>
+        <i id="post" class="faButton fas fa-plus"></i>
     </div>
 
 </nav>
