--- a/public/assets/css/photojenia_style.css
+++ b/public/assets/css/photojenia_style.css
@@ -2,6 +2,15 @@ body {
   background-color: rgb(54, 48, 48);
   color: white;
 }
+footer {
+  position: absolute;
+  bottom: 0;
+  border-top: white 3px solid;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: rgb(54, 48, 48);
+}
 
 /* @media (max-width:639px) {
 
@@ -13,7 +22,23 @@ body {
   display: inline;
 }
 @media (max-width: 767px) {
-  .navButton {
+  #home {
+    display: none;
+  }
+
+  #search {
+    display: none;
+  }
+
+  #notifications {
+    display: none;
+  }
+
+  #post {
+    display: none;
+  }
+
+  .faButton {
     display: none;
   }
 
@@ -46,17 +71,15 @@ body {
     font-size: 30px;
   }
 
-  .navButton {
-    height: 30px;
-    width: 50px;
+  .faButton {
+    font-size: 24px;
     margin-right: 35px;
     padding-top: 10px;
     padding-bottom: 10px;
   }
 
   #profilePicture {
-    height: 30px;
-    width: 50px;
+    font-size: 24px;
     margin-left: 20px;
   }
 }
