--- a/public/assets/css/photojenia_style.css
+++ b/public/assets/css/photojenia_style.css
@@ -8,7 +8,6 @@ footer {
   border-top: white 3px solid;
   width: 100%;
   height: 60px;
-  line-height: 60px;
   background-color: rgb(54, 48, 48);
 }
 
@@ -46,7 +45,6 @@ footer {
     display: flex;
     background-color: rgb(54, 48, 48);
     border-bottom: white 3px solid;
-    margin-left: 
   }
 
   #title {
@@ -56,6 +54,12 @@ footer {
 
   #profilePicture {
     display: none;
+  }
+
+  #footerButtons {
+    font-size: 24px;
+    padding-top: 20px;
+    padding-bottom: 15px;
   }
 }
 
@@ -73,7 +77,7 @@ footer {
 
   .faButton {
     font-size: 24px;
-    margin-right: 35px;
+    margin-right: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
   }
@@ -82,6 +86,25 @@ footer {
     font-size: 24px;
     margin-left: 20px;
   }
+
+  #homeFooter {
+    display: none;
+  }
+
+  #searchFooter {
+    display: none;
+  }
+
+  #postFooter {
+    display: none;
+  }
+
+  #notificationsFooter {
+    display: none;
+  }
+
+  #profileFooter {
+    display: none;
+  }
 }
 
-@media (min-width: 980px) {}
