--- a/views/partials/topnav.handlebars
+++ b/views/partials/topnav.handlebars
@@ -2,7 +2,7 @@
 
     <i id="profilePicture" class="fas fa-user"></i>
 
-    <a id="title" class="navbar-brand" href="#">PHOTOJENIA</a>
+    <a id="title" class="navbar-brand" href="#">PHOTOJENIA (INSIDER/INSIDE)</a>
 
     <div class="d-flex justify-content-end">
         <i id="home" class="faButton fas fa-home"></i>
