--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">
-            <div id="footerButtons" class="d-flex justify-content-between">
+            <div id="footerButtons" class="d-flex justify-content-between fa-cog">
                 <i id="homeFooter" class="faButton fas fa-home"></i>
                 <i id="searchFooter" class="faButton fas fa-search"></i>
                 <i id="postFooter" class="faButton fas fa-plus"></i>
