changed our name

--- a/views/partials/topnav.handlebars
+++ b/views/partials/topnav.handlebars
@@ -2,7 +2,7 @@
 
     <a href="/api/myprofile"><i id="profilePicture" class="fas fa-user fa-cog"></i></a>
 
-    <a id="title" class="navbar-brand" href="#">PHOTOJENIA (INSIDER/INSIDE)</a>
+    <a id="title" class="navbar-brand" href="#">INSIDER</a>
 
     <div class="d-flex justify-content-end">
         <a href="/"><i id="home" class="faButton fas fa-home fa-cog"></i></a>
