not sure what I just changed lol

--- a/views/partials/topnav.handlebars
+++ b/views/partials/topnav.handlebars
@@ -6,7 +6,7 @@
 
     <div class="d-flex justify-content-end">
         <a href="/"><i id="home" class="faButton fas fa-home fa-cog"></i></a>
-        <a href="/"><i id="search" class="faButton fas fa-search fa-cog"></i></a>
+        <a href="/api/user"><i id="search" class="faButton fas fa-search fa-cog"></i></a>
         <a href="/"><i id="notifications" class="faButton fas fa-bolt fa-cog"></i></a>
         <button><i id="post" class="faButton fas fa-plus fa-cog"></i></button>
     </div>
