Revert "Knp working"

--- a/views/partials/topnav.handlebars
+++ b/views/partials/topnav.handlebars
@@ -1,14 +1,14 @@
 <nav id="topnav" class="navbar">
 
-    <a href="/api/myprofile"><i id="profilePicture" class="fas fa-user fa-cog"></i></a>
+    <i id="profilePicture" class="fas fa-user"></i>
 
-    <a id="title" class="navbar-brand" href="#">INSIDER</a>
+    <a id="title" class="navbar-brand" href="#">PHOTOJENIA</a>
 
     <div class="d-flex justify-content-end">
-        <a href="/"><i id="home" class="faButton fas fa-home fa-cog"></i></a>
-        <a href="/"><i id="search" class="faButton fas fa-search fa-cog"></i></a>
-        <a href="/"><i id="notifications" class="faButton fas fa-bolt fa-cog"></i></a>
-        <button><i id="post" class="faButton fas fa-plus fa-cog"></i></button>
+        <i id="home" class="faButton fas fa-home"></i>
+        <i id="search" class="faButton fas fa-search"></i>
+        <i id="notifications" class="faButton fas fa-bolt"></i>
+        <i id="post" class="faButton fas fa-plus"></i>
     </div>
 
 </nav>
