--- a/public/assets/css/photojenia_style.css
+++ b/public/assets/css/photojenia_style.css
@@ -8,18 +8,16 @@ footer {
   border-top: white 3px solid;
   width: 100%;
   height: 60px;
+  line-height: 60px;
   background-color: rgb(54, 48, 48);
 }
 
-.fa-cog {
-  color: white;
-}
+/* @media (max-width:639px) {
 
-button {
-  
-}
-
+} */
 #profile-picture {
+  width: 100px;
+  height: 100px;
   background-color: gray;
   display: inline;
 }
@@ -48,6 +46,7 @@ button {
     display: flex;
     background-color: rgb(54, 48, 48);
     border-bottom: white 3px solid;
+    margin-left: 
   }
 
   #title {
@@ -57,12 +56,6 @@ button {
 
   #profilePicture {
     display: none;
-  }
-
-  #footerButtons {
-    font-size: 24px;
-    padding-top: 20px;
-    padding-bottom: 15px;
   }
 }
 
@@ -80,7 +73,7 @@ button {
 
   .faButton {
     font-size: 24px;
-    margin-right: 50px;
+    margin-right: 35px;
     padding-top: 10px;
     padding-bottom: 10px;
   }
@@ -89,25 +82,6 @@ button {
     font-size: 24px;
     margin-left: 20px;
   }
-
-  #homeFooter {
-    display: none;
-  }
-
-  #searchFooter {
-    display: none;
-  }
-
-  #postFooter {
-    display: none;
-  }
-
-  #notificationsFooter {
-    display: none;
-  }
-
-  #profileFooter {
-    display: none;
-  }
 }
 
+@media (min-width: 980px) {}
